# openapi.json
@@ -3513,6 +3513,47 @@
         }
       }
     },
+    "/api/v1/quiz/questions/pending": {
+      "get": {
+        "operationId": "QuizController_listPending",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/QuizQuestionAdminShape"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/quiz/questions/{id}": {
+      "delete": {
+        "operationId": "QuizController_rejectQuestion",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/v1/quiz/questions/{riteSheetId}": {
       "get": {
         "operationId": "QuizController_getQuestionsForRite",
